Removed tomcat dependencies from the pom.xml because we don't need them anymore.