@@ -189,21 +189,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<!-- http port -->
-					<port>8080</port>
-					<!-- application path always starts with / -->
-					<path>/${project.build.finalName}</path>
-					<systemProperties>
-						<JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
-					</systemProperties>
-					<useTestClasspath>false</useTestClasspath>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.2.1</version>
@@ -280,8 +265,6 @@
 			<id>concord-jnlp</id>
 			<url>http://jnlp.concord.org/dev/</url>
 		</repository>
-		<!-- NP: 2012.02.02 - couldn't find tomcat maven plugin -->
-		<!-- see: http://bit.ly/zd5Jv9 -->
 		<repository>
 			<id>app-fuse</id>
 			<url>http://static.appfuse.org/repository/</url>
@@ -493,18 +476,6 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>3.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-catalina</artifactId>
-			<version>7.0.32</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-coyote</artifactId>
-			<version>7.0.32</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
